--- a/style.css
+++ b/style.css
@@ -62,6 +62,7 @@ Text Domain: new-maubeuge
 @import "./assets/css/template-parts/join-us.css";
 @import "./assets/css/template-parts/latest-posts.css";
 @import "./assets/css/template-parts/partners-grid.css";
+@import "./assets/css/template-parts/row-2-columns-large.css";
 @import "./assets/css/template-parts/row-2-columns-regular.css";
 @import "./assets/css/template-parts/testimonials-slider.css";
 
