--- a/assets/css/template-parts/row-2-columns-large.css
+++ b/assets/css/template-parts/row-2-columns-large.css
@@ -1,2 +1,72 @@
 /* #Row 2 Columns (Large)
 --------------------------------------------------------------- */
+.row-2-columns-large {
+    overflow: hidden;
+}
+
+@media screen and (min-width: 992px) {
+    .row-2-columns-large {
+        margin: 0;
+    }
+}
+
+/* Content */
+.row-2-columns-large .formatted .subtitle {
+    margin-bottom: -1rem;
+    color: var(--color-theme);
+    font-size: 16px;
+    font-weight: 500;
+    text-transform: uppercase;
+}
+
+.row-2-columns-large .formatted ul>li:before {
+    filter: brightness(0) saturate(100%) invert(47%) sepia(58%) saturate(540%) hue-rotate(65deg) brightness(98%) contrast(88%);
+}
+
+/* Image */
+@media screen and (min-width: 992px) {
+    .row-2-columns.row-2-columns-large .image-wrapper {
+        width: 115%;
+    }
+}
+
+@media screen and (min-width: 992px) {
+    .row-2-columns.row-2-columns-large .reverse .image-wrapper {
+        float: right;
+    }
+}
+
+.row-2-columns.row-2-columns-large .image-wrapper:before {
+    width: 50%;
+    aspect-ratio: 1.45;
+    top: unset;
+    bottom: 30px;
+    left: -1rem;
+    background-color: var(--color-theme);
+    border-radius: 30px 0 10px 0;
+}
+
+@media screen and (min-width: 992px) {
+    .row-2-columns.row-2-columns-large .image-wrapper:before {
+        left: -30px;
+    }
+}
+
+.row-2-columns.row-2-columns-large .reverse .image-wrapper:before {
+    border-radius: 0 30px 0 10px;
+}
+
+@media screen and (min-width: 992px) {
+    .row-2-columns.row-2-columns-large .reverse .image-wrapper:before {
+        right: -30px;
+        left: unset;
+    }
+}
+
+.row-2-columns.row-2-columns-large .image-wrapper:after {
+    content: none;
+}
+
+.row-2-columns.row-2-columns-large .thumbnail {
+    aspect-ratio: 1.4;
+}
