--- a/assets/css/template-parts/row-2-columns-regular.css
+++ b/assets/css/template-parts/row-2-columns-regular.css
@@ -58,7 +58,7 @@
     z-index: -1;
 }
 
-.row-2-columns .image-wrapper:before {
+.row-2-columns.row-2-columns-regular .image-wrapper:before {
     width: 45%;
     top: -19px;
     left: -19px;
@@ -66,7 +66,7 @@
     border-radius: 0 10px 0 30px;
 }
 
-.row-2-columns .reverse .image-wrapper:before {
+.row-2-columns.row-2-columns-regular .reverse .image-wrapper:before {
     aspect-ratio: 0.75;
     top: unset;
     bottom: -19px;
