--- a/assets/css/templates/les-papillons-blancs.css
+++ b/assets/css/templates/les-papillons-blancs.css
@@ -1,10 +1,26 @@
 /* #Les Papillons Blancs
 --------------------------------------------------------------- */
+/* Hero */
+.page-template-les-papillons-blancs-template .row-2-columns-large:before {
+    content: "";
+    width: 15%;
+    min-width: 150px;
+    height: auto;
+    aspect-ratio: 1;
+    position: absolute;
+    top: 0;
+    left: 1rem;
+    border-radius: 30px 0 10px 0;
+    border: 1px solid var(--mercury);
+    z-index: -1;
+}
+
+/* Team Composition */
 .page-template-les-papillons-blancs-template .team-composition {
     margin: var(--spacing-section-outer) 0;
 }
 
-.page-template-les-papillons-blancs-template .team-composition > .container {
+.page-template-les-papillons-blancs-template .team-composition>.container {
     padding: var(--spacing-section-inner) 0;
     background-color: var(--selago);
     border-radius: var(--border-radius);
