--- a/assets/css/templates/our-missions.css
+++ b/assets/css/templates/our-missions.css
@@ -1,5 +1,21 @@
 /* #Our Missions & Values
 --------------------------------------------------------------- */
+/* Hero */
+.page-template-our-missions-template .row-2-columns-large:before {
+    content: "";
+    width: 25%;
+    min-width: 150px;
+    height: auto;
+    aspect-ratio: 1;
+    position: absolute;
+    top: 0;
+    right: -1rem;
+    border-radius: 0 10px 0 30px;
+    border: 1px solid var(--mercury);
+    z-index: -1;
+}
+
+/* Our Values */
 .page-template-our-missions-template .our-values {
     margin: var(--spacing-section-outer) 0;
 }
