--- a/assets/css/templates/our-teams.css
+++ b/assets/css/templates/our-teams.css
@@ -1,5 +1,21 @@
 /* #Our Teams
 --------------------------------------------------------------- */
+/* Hero */
+.page-template-our-teams-template .row-2-columns-large:before {
+    content: "";
+    width: 25%;
+    min-width: 150px;
+    height: auto;
+    aspect-ratio: 1;
+    position: absolute;
+    top: 0;
+    right: -1rem;
+    border-radius: 0 10px 0 30px;
+    border: 1px solid var(--mercury);
+    z-index: -1;
+}
+
+/* Workers*/
 .page-template-our-teams-template .workers {
     margin: var(--spacing-section-outer) 0;
 }
