--- a/assets/css/pages/single-project.css
+++ b/assets/css/pages/single-project.css
@@ -66,7 +66,7 @@
     }
 }
 
-.single-avs_project .team-grid .item {
+.single-avs_project .team-grid .element {
     width: 100%;
     max-width: 270px;
     display: flex;
