fix(contact-template): add links to informations

--- a/assets/css/templates/contact-page.css
+++ b/assets/css/templates/contact-page.css
@@ -40,3 +40,8 @@
     max-width: 32px;
     height: auto;
 }
+
+.page-template-contact-page-template .informations>div a {
+    text-decoration: none;
+    color: var(--primary);
+}
