--- a/assets/css/template-parts/insights-list.css
+++ b/assets/css/template-parts/insights-list.css
@@ -16,7 +16,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  gap: 1rem;
+  gap: 2rem;
 }
 
 @media screen and (min-width: 992px) {
@@ -30,7 +30,6 @@
   min-height: 450px;
   position: relative;
   perspective: 1000px;
-  cursor: pointer;
 }
 
 @media screen and (min-width: 992px) {
@@ -47,8 +46,7 @@
   transform-style: preserve-3d;
 }
 
-.insights-list .insight:hover .insight-inner,
-.insights-list .insight:focus .insight-inner {
+.insights-list .insight.active .insight-inner {
   transform: rotateY(180deg);
 }
 
@@ -68,7 +66,6 @@
   border-radius: var(--border-radius);
   backface-visibility: hidden;
   box-sizing: border-box;
-  overflow: hidden;
 }
 
 .insights-list .insight .face:before {
@@ -122,15 +119,19 @@
 }
 
 .insights-list .insight .flip-icon {
-  width: 1.5rem;
-  height: 1.5rem;
+  padding: 1rem;
   position: absolute;
-  right: 2rem;
-  bottom: 2rem;
+  right: -1rem;
+  bottom: -1rem;
   z-index: 1;
+  border-radius: 5px 0 16px 0;
+  border: 0;
+  background-color: var(--secondary);
+  cursor: pointer;
 }
 
 .insights-list .insight .flip-icon svg {
-  width: 100%;
+  width: 18px;
+  height: 20px;
   height: auto;
 }
