--- a/assets/css/pages/archive-workshops.css
+++ b/assets/css/pages/archive-workshops.css
@@ -5,6 +5,12 @@
     position: relative;
 }
 
+@media screen and (max-width: 991px) {
+    .post-type-archive-avs_workshop .map {
+        position: unset;
+    }
+}
+
 .post-type-archive-avs_workshop .map:before {
     content: "";
     width: 30%;
@@ -18,6 +24,15 @@
     border: 1px solid var(--mercury);
     border-radius: 0 30px 0 10px;
     transform: translateX(-33%);
+}
+
+@media screen and (max-width: 991px) {
+    .post-type-archive-avs_workshop .map:before {
+        top: var(--header-height);
+        right: -1rem;
+        left: unset;
+        transform: rotate(-180deg);
+    }
 }
 
 /* Numbers */
