--- a/assets/css/templates/les-papillons-blancs.css
+++ b/assets/css/templates/les-papillons-blancs.css
@@ -1,6 +1,12 @@
 /* #Les Papillons Blancs
 --------------------------------------------------------------- */
 /* Hero */
+@media screen and (max-width: 991px) {
+    .page-template-les-papillons-blancs-template .row-2-columns-large {
+        position: unset;
+    }
+}
+
 .page-template-les-papillons-blancs-template .row-2-columns-large:before {
     content: "";
     width: 15%;
@@ -13,6 +19,15 @@
     border-radius: 30px 0 10px 0;
     border: 1px solid var(--mercury);
     z-index: -1;
+}
+
+@media screen and (max-width: 991px) {
+    .page-template-les-papillons-blancs-template .row-2-columns-large:before {
+        top: var(--header-height);
+        right: -1rem;
+        left: unset;
+        transform: rotate(-90deg);
+    }
 }
 
 /* Team Composition */
