--- a/assets/css/templates/our-missions.css
+++ b/assets/css/templates/our-missions.css
@@ -1,6 +1,10 @@
 /* #Our Missions & Values
 --------------------------------------------------------------- */
 /* Hero */
+.page-template-our-missions-template .row-2-columns-large {
+    position: unset;
+}
+
 .page-template-our-missions-template .row-2-columns-large:before {
     content: "";
     width: 25%;
@@ -13,6 +17,12 @@
     border-radius: 0 10px 0 30px;
     border: 1px solid var(--mercury);
     z-index: -1;
+}
+
+@media screen and (max-width: 991px) {
+    .page-template-our-missions-template .row-2-columns-large:before {
+        top: var(--header-height);
+    }
 }
 
 /* Our Values */
