--- a/assets/css/elements/header.css
+++ b/assets/css/elements/header.css
@@ -115,7 +115,8 @@ body.js-menuOpened {
 }
 
 .menu-header li a:hover,
-.menu-header li a:focus {
+.menu-header li a:focus,
+.menu-header li.menu-item-has-children:hover > a {
     color: var(--secondary);
 }
 
@@ -131,7 +132,8 @@ body.js-menuOpened {
 }
 
 .menu-header li.menu-item-has-children>a:hover:after,
-.menu-header li.menu-item-has-children>a:focus:after {
+.menu-header li.menu-item-has-children>a:focus:after,
+.menu-header li.menu-item-has-children:hover > a:after {
     transform: rotate(90deg);
     filter: brightness(0) saturate(100%) invert(45%) sepia(94%) saturate(359%) hue-rotate(65deg) brightness(95%) contrast(87%);
 }
