--- a/assets/css/elements/heros.css
+++ b/assets/css/elements/heros.css
@@ -4,7 +4,9 @@
 .hero-simple {
     margin-top: 24px;
     margin-bottom: var(--spacing-section-inner);
+    position: relative;
     text-align: center;
+    overflow: hidden;
 }
 
 .parent-title {
@@ -12,6 +14,23 @@
     color: var(--secondary);
     text-transform: uppercase;
     font-weight: 500;
+}
+
+/* Mobile - Decorated */
+@media screen and (max-width: 991px) {
+    .hero-mobile-decorated:before {
+        content: "";
+        width: 15%;
+        min-width: 120px;
+        height: auto;
+        aspect-ratio: 1;
+        position: absolute;
+        top: -3rem;
+        right: -1rem;
+        border-radius: 0 0 0 30px;
+        border: 1px solid var(--mercury);
+        z-index: -1;
+    }
 }
 
 /* Project */
