--- a/assets/css/templates/our-ecosystem.css
+++ b/assets/css/templates/our-ecosystem.css
@@ -1,29 +1,19 @@
 /* #Our Ecosystem
 --------------------------------------------------------------- */
 /* Hero */
-.page-template-our-ecosystem-template .row-2-columns-large {
-    position: unset;
-}
-
-.page-template-our-ecosystem-template .row-2-columns-large:before {
-    content: "";
-    width: 15%;
-    min-width: 150px;
-    height: auto;
-    aspect-ratio: 1;
-    position: absolute;
-    top: calc(var(--header-height) + 1rem);
-    left: -1rem;
-    border-radius: 30px 0 10px 0;
-    border: 1px solid var(--mercury);
-    z-index: -1;
-}
-
-@media screen and (max-width: 991px) {
-    .page-template-our-ecosystem-template .row-2-columns-large:before {
-        right: -1rem;
-        left: unset;
-        transform: rotate(-90deg);
+@media screen and (min-width: 992px) {
+    .page-template-our-ecosystem-template:before {
+        content: "";
+        width: 15%;
+        min-width: 150px;
+        height: auto;
+        aspect-ratio: 1;
+        position: absolute;
+        top: calc(var(--header-height) + 2rem);
+        left: -1rem;
+        border-radius: 30px 0 10px 0;
+        border: 1px solid var(--mercury);
+        z-index: -1;
     }
 }
 
