--- a/assets/css/templates/our-story.css
+++ b/assets/css/templates/our-story.css
@@ -1,38 +1,25 @@
 /* #Our Story
 --------------------------------------------------------------- */
 /* Hero */
-@media screen and (max-width: 991px) {
-    .page-template-our-story-template .row-2-columns-large {
-        position: unset;
-    }
-}
-
 @media screen and (min-width: 992px) {
     .page-template-our-story-template .row-2-columns-large {
         margin: 0 0 calc(var(--spacing-section-outer) * -1 - 30px) 0 !important;
     }
 }
 
-.page-template-our-story-template .row-2-columns-large:before {
-    content: "";
-    width: 15%;
-    min-width: 150px;
-    height: auto;
-    aspect-ratio: 1;
-    position: absolute;
-    top: 0;
-    left: 1rem;
-    border-radius: 30px 0 10px 0;
-    border: 1px solid var(--mercury);
-    z-index: -1;
-}
-
-@media screen and (max-width: 991px) {
+@media screen and (min-width: 992px) {
     .page-template-our-story-template .row-2-columns-large:before {
-        top: var(--header-height);
-        right: -1rem;
-        left: unset;
-        transform: rotate(-90deg);
+        content: "";
+        width: 15%;
+        min-width: 150px;
+        height: auto;
+        aspect-ratio: 1;
+        position: absolute;
+        top: 0;
+        left: 1rem;
+        border-radius: 30px 0 10px 0;
+        border: 1px solid var(--mercury);
+        z-index: -1;
     }
 }
 
