--- a/assets/css/elements/buttons.css
+++ b/assets/css/elements/buttons.css
@@ -15,7 +15,8 @@
 }
 
 .btn {
-    height: 40px;
+    width: 100%;
+    height: 50px;
     padding: 0.35rem 1.4rem;
     box-sizing: content-box;
     position: relative;
@@ -31,7 +32,14 @@
     border: 1px solid var(--silver);
     border-radius: var(--border-radius);
     transition: background-color ease 350ms, color ease 350ms;
+    box-sizing: border-box;
     cursor: pointer;
+}
+
+@media screen and (min-width: 768px) {
+    .btn {
+        width: unset;
+    }
 }
 
 .btn.btn:hover,
